Adjust Project Slide Image Alignment Fix

--- a/src/component/Project/index.scss
+++ b/src/component/Project/index.scss
@@ -43,6 +43,7 @@
             img {
               margin-left  : auto;
               margin-right : auto;
+              display      : block;
             }
           }
         }
